1. sync animation; 2. resolve linebreak when white space is at the end of line

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -171,6 +171,8 @@ ul {
     top: 0px;
     left: 0px;
     padding: 10px;
+    opacity: 0;
+    pointer-events: none;
 }
 
 #accessibility {
